<resources>
    <string name="app_name">Licenta v0.0</string>
    <string name="google_maps_key">AIzaSyAkwZKg7l5WjZsV0pNYT16KJOw7ZU5DreA</string>
    <string name="CID">CID:</string>
    <string name="LAC">LAC:</string>
    <string name="MCC">MCC:</string>
    <string name="MNC">MNC:</string>
    <string name="LAT">LAT:</string>
    <string name="LON">LON:</string>
    <string name="STATUS">STATUS:</string>
    <string name="ARFCN">ARFCN:</string>
    <string name="BSIC">BSIC:</string>
    <string name="OPERATOR">Operator:</string>
    <string name="ASU">ASU:</string>
    <string name="DBM">DBM:</string>
    <string name="SIGNLEVEL">Signal Level:</string>
    <string name="TIMING">TimingAdvance"</string>
    <string name="LATITUDE">Latitude:</string>
    <string name="LONGITUDE">Longitude:</string>
    <string name="ADDRESS">Address:</string>
    <string name="OPERATORNAME">Operator Name:</string>
    <string name="OPERATORCODE">Operator Code:</string>
    <string name="NETWORKTYPE">Network Type:</string>
    <string name="COUNTRY">Country:</string>
    <string name="IMSICODE">IMSI Code:</string>
    <string name="SIMSERIAL">SIM Number:</string>
    <string name="DEVICETYPE">Device Type:</string>
    <string name="IMEICODE">IMEI Code:</string>
    <string name="OK">OK</string>
    <string name="TITLE">IMSI Catcher Detector</string>
    <string name="APPSCOPE">The application which detects false base stations.</string>
    <string name="APPDESCRIPTOR">Application which detects false base stations in GSM Networks.</string>
    <string name="GREENDESCRIPT">The base station in safe!</string>
    <string name="ORANGEDESCRIPT">Investigation is necessary for the base station!</string>
    <string name="REDDESCRIPT">The base station is false!</string>
    <string name="GIT">GITHUB LINK</string>
    <string name="DOC">DOCUMENTATIOn</string>
    <string name="MENUADVICE">-->Swipe right for the menu</string>
    <string name="VERIFYTITLE">Check current cell</string>
    <string name="CELLINFO">Current Cell Info</string>
    <string name="SIGNALINFO">Signal Info</string>
    <string name="CELLLOCATIONINFO">Cell Location Info</string>
    <string name="MAPLOCATION">Location on the map</string>
    <string name="DBMAP">Database Cells Map</string>
    <string name="NETWORKINFO">Network Info</string>
    <string name="SIMINFO">SIM Info</string>
    <string name="DEVICEINFO">Device Info</string>
    <string name="OPTIONS">Options</string>
    <string name="LANG">Language:</string>
    <string name="DarkMode">Dark Mode: </string>
    <string name="ROMANIAN">Romanian</string>
    <string name="ENGLISH">English</string>
    <string name="alert">There is an IMSI Catcher nearby! Please check the cell you are connected to!</string>
    <string name="checkerAdviceTitle">Read before using!</string>
    <string name="checkerAdviceSubtitle">Click on the image or text</string>
    <string name="startCheckingActivity">Start checking the cell</string>
    <string name="checkerAdvice1">1.Please assure that during the test your device does not move.Otherwise the output of the test will not be correct.</string>
    <string name="checkerAdvice2">2.You can see a detailed report of the failed test by pressing on the result.</string>
    <string name="HOME">Home</string>
    <string name="VERIFY">Check Current Cell</string>
    <string name="SIMDETAILS">SIM/Device Info</string>
    <string name="CELLINFODETAILS">Current Cell Info</string>
    <string name="SEECELLMAP">Cell Map</string>
    <string name="ANOTHERDETAILS">Other details</string>
    <string name="InfOpt">Options and info</string>
    <string name="GOOD">GOOD</string>
    <string name="WARNING">WARNING</string>
    <string name="ALERT">ALERT</string>
    <string name="CHECK">Always show this info</string>
    <string name="CHECKSTARTED">The check has started</string>
    <string name="CHECKSENDED">The check has ended</string>
    <string name="CHECKSTOPPED">The check was stopped</string>
    <string name="CHECKINGSIGNAL">Checking signal power</string>
    <string name="CHECKINGPBDB">Checking public DB</string>
    <string name="CHECKINGINDB">Checking internal DB</string>
    <string name="CHECKINGNEIGHBOUR">Checking neighbour list</string>
    <string name="CHECKINGCONSISTENCY">Checking cell consistency</string>
    <string name="CHECKINGCONECTIVITY">Checking conectivity</string>
    <string name="CHECKNAME">Check done</string>
    <string name="RESULT">Result</string>
    <string name="FINAlRESULT">Final result:</string>
    <string name="RETAKE">Retake the tests</string>
    <string name="TESTPASSED">Test passed</string>
    <string name="TESTFAILED">Test failed</string>
    <string name="STOP">Stop tests</string>
    <string name="LASTCHECK">Last check:</string>
    <string name="SIGNALINFOR">For this test, there was calculated an average value of all the values for the signal power for this cell. The test failed because the current values is higher than the average +/- deviation.</string>
    <string name="PBDBINFO">The test failed because the data of this cell was not found in the public database. This might be possible because of the restriction put on the number of searches per day.</string>
    <string name="INTERNALINFO">The test failed because the data of this cell was not found in the database of the application which contains verified cells.</string>
    <string name="NEIGHINFO">The test failed because the cell does not provide a list with the neighbouring antenas. An IMSI Catcher never provides a list with the neighbours.</string>
    <string name="CONSISTENCYINFO">The test failed because the data of the cell does not correspond with the data of the one in the application database. The LAC of the current cell is different from the one of the cell in database.</string>
    <string name="CONNECTIVITYINFO">The test failed because the phone is not connected to the internet or it is connected but it doesn\'t offer mobile data services.</string>
    <string name="ALLCELLS">ALL</string>
    <string name="DATABASEVIEWER">Database Viewer</string>
    <string name="SEARCH">Search</string>
    <string name="STATISTICS">Statistics</string>
    <string name="LOADING">Please wait while the application is loading</string>
    <string name="IMSIALERT">IMSI CATCHER ALERT</string>
    <string name="IMSIINFO">YOUR PHONE IS BEING ATTACKED BY AN IMSI CATCHER. PRESS TTHE BUTTON BELLOW TO SEE WHICH TESTS THE CELL YOU ARE CONNECTED TO FAILED</string>
    <string-array name="cellTypes">
        <item>GoodCells</item>
        <item>WarningCells</item>
        <item>AlertCells</item>
    </string-array>
</resources>
